feat: initialize and render game on codenames start
